COMMIT "Flyweight(Cache) Pattern"